--- a/.github/ISSUE_TEMPLATE/feature-request.yml
+++ b/.github/ISSUE_TEMPLATE/feature-request.yml
@@ -1,7 +1,7 @@
 ---
 name: 🛠️ Feature Request
 description: Suggest an idea to help us improve CookiePyStarter
-title: "[Feature]: "
+title: "Feature: "
 labels:
   - "feature_request"
 
