--- a/{{ cookiecutter.project_slug }}/.github/ISSUE_TEMPLATE/config.yml
+++ b/{{ cookiecutter.project_slug }}/.github/ISSUE_TEMPLATE/config.yml
@@ -1,7 +1,7 @@
 contact_links:
     - name: 📃 Documentation Issue
-      url: https://github.com/mramitdas/CookiePyStarter/issues/new
+      url: https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}/issues/new
       about: This issue tracker is not for documentation issues. Please file documentation issues here.
     - name: 🤔 Questions and Help
-      url: https://github.com/mramitdas/CookiePyStarter/wiki
-      about: This issue tracker is not for support questions. Please refer to the CookiePyStarter wiki.
+      url: https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}/wiki
+      about: This issue tracker is not for support questions. Please refer to the {{ cookiecutter.project_name }} wiki.
